add AppMain unit test and loadSetting unit test in Controller